--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,3 +1,31 @@
 <app-header></app-header>
+<div class="container">
+    <div style="height: 100vh;background-image: url('https://static.vecteezy.com/system/resources/thumbnails/033/027/755/small_2x/flat-lay-vegetables-on-white-background-food-and-diet-concept-ai-generated-free-photo.jpg'); background-size: cover;" class="d-flex justify-content-center align-items-center">
+   <div>
+    <h1>Login</h1>
+    <p>More than 100 plus Recipes from around the world</p>
+     <form [formGroup]="loginForm" (ngSubmit)="login()" style="width: 500px; background-color: rgba(0, 0, 0, 0.2);" class="border rounded p-5 mt-5 shadow">
+        <div class="mb-5 text-center">
+            <h3><i class="fa-solid fa-utensils "></i> Cookpedia</h3>
+        </div>
+         <div class="mb-3">
+             <input name="email" formControlName="email" type="text" class="form-control" placeholder="Email">
+        </div>
+         @if (loginForm.get('email')?.errors && loginForm.get('email')?.touched) {
+            <div class="mb-3 text-danger fw-bolder">Invalid Email</div>
+        }
+         <div class="mb-3">
+            <input name="password" formControlName="password" type="text" class="form-control" placeholder="Password">
+        </div>
+         @if (loginForm.get('password')?.errors && loginForm.get('password')?.touched) {
+            <div class="mb-3 text-danger fw-bolder">Invalid Password</div>
+        }
+         <div class="mb-3">
+            <button type="submit" class="btn bg-success form-control">Login</button>
+        </div>
+    </form>
+   </div>
+   </div>
+    </div>
 
 <app-footer></app-footer>
