--- a/src/app/view-recipe/view-recipe.html
+++ b/src/app/view-recipe/view-recipe.html
@@ -1,1 +1,63 @@
-<p>view-recipe works!</p>
+<app-header></app-header>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-6"><a routerLink="/recipes">Back To Recipe List</a>
+        <br>
+    <img class="w-100 my-5" [src]="recipe().image" alt="recipe">
+<div class="d-flex justify-content-between">
+    <button class="btn btn-success">Download Recipe</button>
+    <button class="btn btn-primary">Save Recipe</button>
+</div>
+</div>
+        <div class="col-lg-6"><h1 class="">{{recipe().name}}</h1>
+        <div class="row mt-5">
+            <div class="col-lg-4">
+                <h6>Cuisine : <span class="text-danger">{{recipe().cuisine}}</span></h6>
+            </div>
+            <div class="col-lg-4">
+                <h6>Servings : <span class="text-success">{{recipe().servings}}</span></h6>
+            </div>
+            <div class="col-lg-4">
+                <h6>Mode of Cooking : <span class="text-primary">{{recipe().difficulty}}</span></h6>
+            </div>
+            <div class="col-lg-4">
+                <div class="d-flex flex-column text-center">
+                    <div><img width="100px" src="https://tse4.mm.bing.net/th/id/OIP.udRbBonPVvUgAt4BNyrfNgHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="img"></div>
+                   <h6>Preparation Time</h6>
+                   <span class="text-primary">{{recipe().prepTimeMinutes}} Minutes</span></div>
+            </div>
+            <div class="col-lg-4">
+                <div class="d-flex flex-column text-center">
+                    <div><img width="100px" src="https://media.istockphoto.com/vectors/cooking-time-vector-id928783344?k=20&m=928783344&s=612x612&w=0&h=UxO03lwQY2O3oQ_np_j2PA3AYMZmDjD0mCKecGaLHxw=" alt="img"></div>
+                   <h6>Cooking Time</h6>
+                   <span class="text-primary">{{recipe().cookTimeMinutes}} Minutes</span></div>
+            </div>
+            <div class="col-lg-4">
+                <div class="d-flex flex-column text-center">
+                    <div><img width="100px" src="https://tse4.mm.bing.net/th/id/OIP.GSRW37TA9rZDJkQlXYubygHaHa?w=512&h=512&rs=1&pid=ImgDetMain&o=7&rm=3" alt="img"></div>
+                   <h6>Calories Per Servings</h6>
+                   <span class="text-primary">{{recipe().caloriesPerServing}}</span></div>
+            </div>
+        </div>
+        <h2 class="mt-3">Ingredients Needed</h2>
+        <ol>
+            @for (item of recipe().ingredients; track $index) {
+                <li>{{item}}</li>
+            }
+        </ol>
+         <h2>Cooking instructions</h2>
+        <ol>
+            @for (item of recipe().instructions; track $index) {
+                <li>{{item}}</li>
+            }
+        </ol>
+        </div>
+    </div>
+    <div class="mb-5">
+        <h1>Related Recipes</h1>
+        <div class="row my-3">
+
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
