--- a/src/app/view-recipe/view-recipe.html
+++ b/src/app/view-recipe/view-recipe.html
@@ -5,7 +5,7 @@
         <br>
     <img class="w-100 my-5" [src]="recipe().image" alt="recipe">
 <div class="d-flex justify-content-between">
-    <button class="btn btn-success">Download Recipe</button>
+    <button (click)="downloadRecipe()" class="btn btn-success">Download Recipe</button>
     <button class="btn btn-primary">Save Recipe</button>
 </div>
 </div>
@@ -56,8 +56,18 @@
     <div class="mb-5">
         <h1>Related Recipes</h1>
         <div class="row my-3">
-
+        @for (recipe of relatedRecipes(); track $index) {
+        <div class="col-lg-2">
+            <div (click)="viewRelatedRecipeDetails(recipe._id)" class="p-3">
+                    <img class="card-img-top" [src]="recipe.image" alt="">
+                <div class="card-body">
+                    <h5 class="card-title ">{{recipe.name}}</h5>
+                </div>
+                </div>
+            </div>
+        }
+         </div>
         </div>
     </div>
-</div>
+
 <app-footer></app-footer>
