Reciped saved successfully

--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -1,1 +1,30 @@
-<p>about works!</p>
+<app-header></app-header>
+<div class="container">
+    <div class="row align-items-center">
+        <div class="col-lg-6 bg-success text-center">
+      <img width="450px" src="https://th.bing.com/th/id/R.e3178427da26d961a06e45d74c64fbd1?rik=dhPedskdqg%2f9DA&riu=http%3a%2f%2fpluspng.com%2fimg-png%2fvegetable-png-vegetable-png-photos-1600.png&ehk=eaMRsZynxQoaOVf%2bnE%2bSI6QNIHbRGk%2bn3R%2b4ovf5d50%3d&risl=1&pid=ImgRaw&r=0" alt="">
+        </div>
+        <div class="col-lg-6 text-center">
+            <h1>Welcome To CookPedia</h1>
+            <p>Discover 100+ recipes in your hand with the best recipe. <br>
+            Help you to find the easiest way to cook</p>
+        </div>
+    </div>
+    <div class="row align-items-center mt-4 mb-5">
+        <div class="col-lg-6">
+            <h1>About Us</h1>
+            <p>This website allows you to explore a wide variety of food items and recipes in one place. <br> You can view items, download content, and save your favorites for later, making it easy to plan, organize, and enjoy your cooking experience.</p>
+            <ul>
+                <li>Browse a wide collection of food items and recipes</li>
+                <li>Download recipes for offline access</li>
+                <li>Save your favorite items for quick reference</li>
+                <li>Simple, clean, and user-friendly experience</li>
+            </ul>
+            <button class="btn bg-success p-2">Know More About Us</button>
+        </div>
+        <div class="col-lg-6 text-center">
+            <img src="https://png.pngtree.com/png-vector/20250512/ourmid/pngtree-woman-cooking-png-sticker-illustration-png-image_16231850.png" alt="">
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
