--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -1,1 +1,67 @@
-<p>contact works!</p>
+<app-header></app-header>
+<div class="container">
+<div style="height: 150px;" class=" text-center bg-success text-light">
+ <h1 class="fw-bold">Contact Us</h1>
+    <p class="mt-3 px-5" >Have questions, feedback, or suggestions? We’d love to hear from you. Reach out to us anytime and our team will get back to you as soon as possible. Your ideas help us improve and bring you a better cooking experience every day.</p>
+</div>
+<div class="row align-items-center my-5">
+    <div class="col-lg-6">
+    <h3>Get In Touch</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et nam totam at, vero voluptatem esse vel nihil deleniti sapiente iste voluptatibus accusamus corporis veritatis quidem, eius repellat hic, aperiam cum?
+    Minima dolore at accusantium error aspernatur facilis a aut neque quasi blanditiis odit itaque ipsa deserunt tenetur amet similique dignissimos ex, officiis iure nihil magni! Quaerat nisi maxime excepturi a!</p>
+    <div class="d-flex align-items-center mb-3">
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+           <i class="fa-regular fa-address-card"></i>
+            </div>
+        <h5>Address <br>
+        NYC 4567,PO Berlin</h5>
+    </div>
+     <div class="d-flex align-items-center mb-3">
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+           <i class="fa-solid fa-phone"></i>
+            </div>
+        <h5>Phone Number<br>
+        9876590865</h5>
+    </div>
+     <div class="d-flex align-items-center mb-3">
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+           <i class="fa-solid fa-envelope"></i>
+            </div>
+        <h5>E-mail<br>
+        mail</h5>
+    </div>
+    <hr>
+    <h3>Follow Us</h3>
+     <div class="d-flex">
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+           <i class="fa-brands fa-facebook"></i>
+            </div>
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+           <i class="fa-brands fa-instagram"></i>
+            </div>
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+           <i class="fa-brands fa-twitter"></i>
+            </div>
+            <div class="bg-success p-2 fs-5 me-3 rounded-circle">
+          <i class="fa-brands fa-youtube"></i>
+            </div>
+    </div>
+     </div>
+    <div class="col-lg-6 p-5">
+      <div class="border shadow p-3 w-75 ms-5">
+        <h2>Client Testimony</h2>
+        <div class="my-2 p-3 d-flex align-items-center justify-content-center flex-column">
+     <input class="form-control my-2 w-75" placeholder="Name" type="text">
+     <input class="form-control w-75 my-2" placeholder="E-mail" type="text">
+     <textarea placeholder="Message" class="form-control w-75"></textarea>
+        </div>
+        <p>By Submitting,you'r agreeing the terms and condition of our website.We may use your details in our site.</p>
+        <button class="btn bg-success">submit</button>
+      </div>
+    </div>
+    </div>
+    <div class="my-5">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15732.615065352073!2d76.53295229089422!3d9.667899989634373!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07d49025f58f2b%3A0xec9ca10688d35648!2sAthirampuzha%2C%20Kerala!5e0!3m2!1sen!2sin!4v1769499046707!5m2!1sen!2sin" width="1300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</div>
+<app-footer></app-footer>
