--- a/src/app/view-recipe/view-recipe.html
+++ b/src/app/view-recipe/view-recipe.html
@@ -6,7 +6,7 @@
     <img class="w-100 my-5" [src]="recipe().image" alt="recipe">
 <div class="d-flex justify-content-between">
     <button (click)="downloadRecipe()" class="btn btn-success">Download Recipe</button>
-    <button class="btn btn-primary">Save Recipe</button>
+    <button (click)="saveRecipe()" class="btn btn-primary">Save Recipe</button>
 </div>
 </div>
         <div class="col-lg-6"><h1 class="">{{recipe().name}}</h1>
